2015-08-04  Titus Brown  <titus@idyll.org> and Camille Scott
<camille.scott.w@gmail.com>

   * khmer/utils.py: added UnpairedReadsError exception.
   * scripts/{extract-paired-reads,split-paired-reads}.py: changed --output-dir
   argument short form to use '-d'.
   * scripts/{split-paired-reads.py} added -0 <filename> to allow orphans; made
   '-p'/'--force-paired' default & removed from script.
   * tests/{test_scripts,test_streaming_io}.py: updated and added tests for
   new behavior.

2015-08-03  Jacob Fenton  <bocajnotnef@gmail.com>

   * doc/dev/coding-guidelines-and-review.rst: added codespell as a possible
   spelling tool

2015-08-03  Jacob Fenton  <bocajnotnef@gmail.com>

   * Makefile: added oxli to pep257 make target, made clean target wipe out all
   .pyc files in scripts/* and tests/* and oxli/*

2015-08-03  Jacob Fenton  <bocajnotnef@gmail.com>

   * tests/test_counting_single.py: removed redundant test

2015-08-01  Jacob Fenton  <bocajnotnef@gmail.com> and Titus Brown
<titus@idyll.org>

   * scripts/normalize-by-median.py,khmer/khmer_logger.py: added logging
   framework, prototyped in normalize-by-median; added -q/--quiet to
   * tests/test_normalize_by_median.py: associated tests.
   * khmer/khmer_args.py: Made info function use logging functions.
   * tests/khmer_tst_utils.py: removed info reporting in runscript from 'out'
   returned.

2015-08-01  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/kfile.py: added infrastructure for doing compressed output
   * khmer/thread_utils.py: switched threaded_sequence_processor to make use of
   write_record
   * scripts/{extract-long-sequences,extract-paired-reads,
   extract-partitions,fastq-to-fasta,filter-abund-single,filter-abund,
   interleave-reads,normalize-by-median,sample-reads-randomly,
   split-paired-reads,trim-low-abund}.py: added output compression
   * tests/{test_functions,test_scripts,test_normalize_by_median}.py: added
   tests
   * scripts/{load-graph,partition-graph,find-knots.py,