@@ -6,6 +6,8 @@
    argument short form to use '-d'.
    * scripts/{split-paired-reads.py} added -0 <filename> to allow orphans; made
    '-p'/'--force-paired' default & removed from script.
+   * scripts/{normalize-by-median,filter-abund,trim-low-abund}.py: changed
+   long form of '-o' to be '--output'.
    * tests/{test_scripts,test_streaming_io}.py: updated and added tests for
    new behavior.
 
